# mp3dl

./: .env.example  .gitignore  README.md  README.rst  pyproject.toml
new_music_dl/: dl.py  utils.py
tests/: test_new_music_dl.py
